--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -1,66 +1,39 @@
-[colors]
-;My colors are set from .Xresources to match everything else
-my_background 	= #181512
-my_foreground 	= #fff7b9
-my_color0	= #0f1619
-my_color1	= #393843
-my_color2	= #75404b
-my_color3	= #39402e
-my_color4	= #E06459
-my_color5	= #4c584a
-my_color6	= #662b37
-my_color7	= #bfbfbf
-my_color8	= #5d6160
-my_color9	= #662b37
-my_color10	= #39402e
-my_color11	= #393843
-my_color12	= #75404b
-my_color13	= #662b37
-my_color14	= #4c584a
-my_color15	= #bfbfbf
+[bar/primary]
+background = #D93d3c3b
+foreground = #b6a49b
 
-[bar/edp1]
-monitor = ${env:MONITOR:eDP1}
 bottom = true
 width = 100%
 height = 2.5%
-offset-x = 0
-offset-y = 0
-radius = 0.0
-fixed-center = true
-
-background = ${colors.my_background}
-foreground =  ${colors.my_foreground}
 
 line-size = 2.5
-line-color = ${colors.my_color4}
-
 border-size = 0
-border-color = ${colors.my_color2}
 
 padding-left = 0
-padding-right = 0
+padding-right = 1
 
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Source Code Pro:size=10"
-font-1 = "FontAwesome5Free:style=Solid:size=10"
-font-2 = "DejaVu Sans:size=10"
+font-0 = "Noto Display:style=Light:size=11"
+font-1 = "MaterialIcons:size=11"
 
 modules-left = i3 xkeyboard
-modules-center = xwindow
+modules-center = 
+{{if eq .chezmoi.hostname "martin-x360"}}
 modules-right = wireless-network battery backlight pulseaudio temperature cpu date
+{{else if eq .chezmoi.hostname "martin-PC"}}
+modules-right = pulseaudio cpu date
+{{end}}
 
-tray-position = right
-tray-padding = 9
-tray-offset-y = 0%
-tray-offset-x = 0%
-tray-maxsize = 18
+tray-position = none
+tray-maxsize = 24
 tray-detached = false
-tray-background = ${colors.my_background}
+tray-transparent = false
+tray-padding = 2
+tray-scale = 1.0
 
-wm-restack = i3
+;wm-restack = i3
 ;override-redirect = true
 
 [module/backlight]
@@ -68,8 +41,9 @@ type = internal/xbacklight
 output = eDP1
 
 format = <label>
-label = %percentage:2%%
+label = %percentage:2%%
 
+{{if eq .chezmoi.hostname "martin-x360"}}
 [module/battery]
 type = internal/battery
 battery = BAT0
@@ -91,23 +65,21 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
+{{end}}
 
 [module/i3]
 type = internal/i3
 
 label-mode = %mode%
 label-mode-padding = 2
-label-mode-background = ${colors.my_color4}
 
 label-focused = %name%
-label-focused-underline = ${colors.my_foreground}
 label-focused-padding = 2
 
 label-unfocused = %name%
 label-unfocused-padding = 2
 
 label-urgent = %name%
-label-urgent-underline = ${colors.my_color8}
 label-urgent-padding = 2
 
 label-visible = %name%
@@ -115,12 +87,9 @@ label-visible-padding = 2
 
 [module/date]
 type = internal/date
-#interval = 1
-
+date = %d.%m.%y
+time = %H:%M:%S
 label = %date% %time%
-
-date = %d.%m.%y 
-time = %H:%M:%S 
 
 [settings]
 screenchange-reload = true
@@ -138,38 +107,39 @@ margin-bottom = 5
 type = internal/xwindow
 label = %title:0:45:...%
 label-padding = 10
-label-foreground = ${colors.my_foreground}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-label-muted = 
-label-muted-foreground = #66
+;label-muted = 
+;label-muted-foreground = #66
 
-format-volume = <label-volume><ramp-volume>
-label-volume = %percentage:2%%
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
+;format-volume = <label-volume><ramp-volume>
+;label-volume = %percentage:2%%
+;ramp-volume-0 = 
+;ramp-volume-1 = 
 
 [module/cpu]
 type = internal/cpu
-label =  %percentage:2%%
+label =  %percentage:2%%
 interval = 0.5
 
 [module/wireless-network]
 type = internal/network
+{{if eq .chezmoi.hostname "martin-x360"}}
 interface = wlo1
+{{else if eq .chezmoi.hostname "martin-PC"}}
+interface = enp37s0
+{{end}}
 
-#label-connected = %downspeed:9%|%upspeed:9%|%local_ip%|%essid%|%signal%
-label-connected = %downspeed:9%|%upspeed:9%|%local_ip%
+label-connected = %downspeed:9%|%upspeed:9%|%local_ip%
 label-disconnected = 
 
 [module/temperature]
 type = internal/temperature
 thermal-zone = 3
 
-label = %temperature-c%
+label = %temperature-c%
 
 [module/xkeyboard]
 type = internal/xkeyboard
