--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-sudo pacman -S --needed fzf htop tmux nmon wget bash-completion fd
+yay -S --needed fzf htop tmux nmon wget bash-completion fd
 
 {{if eq .wm "i3"}}
-yay -S i3-gaps i3lock-color polybar compton j4-dmenu-desktop dmenu ttf-material-icons-git feh noto-fonts
+yay -S --needed i3-gaps i3lock-color polybar compton j4-dmenu-desktop dmenu feh noto-fonts nerd-fonts-iosevka scrot xclip
 {{end}}
