--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,7 +1,13 @@
 #!/bin/bash
 
+read -p "install missing packages (y/n)?" CONT
+if [ "$CONT" != "y" ]; then
+    exit 0
+fi
+
 yay -S --needed fzf htop tmux nmon wget bash-completion fd
 
 {{if eq .wm "i3"}}
-yay -S --needed i3-gaps i3lock-color polybar compton j4-dmenu-desktop dmenu feh noto-fonts nerd-fonts-iosevka scrot xclip
+yay -S --needed i3-gaps i3lock-color compton dmenu feh noto-fonts scrot xclip
+yay -S --needed polybar j4-dmenu-desktop nerd-fonts-iosevka
 {{end}}
