--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -8,6 +8,6 @@ fi
 yay -S --needed fzf htop tmux nmon wget bash-completion fd
 
 {{if .i3}}
-yay -S --needed i3-gaps i3lock-color compton dmenu feh noto-fonts scrot xclip
+yay -S --needed i3-gaps i3lock-color compton dmenu feh noto-fonts scrot xclip alacritty
 yay -S --needed polybar j4-dmenu-desktop nerd-fonts-iosevka
 {{end}}
