--- a/dot_config/alacritty/alacritty.yml.tmpl
+++ b/dot_config/alacritty/alacritty.yml.tmpl
@@ -136,7 +136,7 @@ font:
     #style: Italic
 
   # Point size
-  size: 6.0
+  size: {{if eq .chezmoi.hostname "martin-x360"}}6.0{{else}}9.0{{end}}
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
