--- a/dot_config/i3/config.tmpl
+++ b/dot_config/i3/config.tmpl
@@ -120,6 +120,9 @@ client.placeholder      $fg     $bg     $fg  $bg       $bg
 ################################################################################
 # keybindings
 
+# needs HandlePowerKey=ignore
+bindsym XF86PowerOff exec ~/.config/i3/lock.sh
+
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
