add work PC configuration

--- a/dot_config/polybar/modules/temperature.conf.tmpl
+++ b/dot_config/polybar/modules/temperature.conf.tmpl
@@ -19,4 +19,6 @@ label-warn-foreground = #f00
 thermal-zone = 3
 {{else if eq .chezmoi.hostname "martin-PC"}}
 hwmon-path = /sys/class/hwmon/hwmon0/temp1_input
+{{else if eq .chezmoi.hostname "r8"}}
+thermal-zone = 3
 {{end}}
