--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -42,9 +42,9 @@ modules-right = {{if eq .chezmoi.hostname "martin-x360"}} battery backlight {{en
 ################################################################################
 # secondary bar (dual screen)
 
-{{if eq .chezmoi.hostname "martin-PC"}}
+{{if eq .screens "2"}}
 [bar/secondary]
-monitor = DP-1
+monitor = {{if eq .chezmoi.hostname "martin-PC"}}DP-1{{else if eq .chezmoi.hostname "r8"}}HDMI2{{end}}
 
 foreground = ${colors.foreground}
 background = ${colors.background}
@@ -59,10 +59,12 @@ font-0 = "Noto Display:style=Light:size=11;4"
 font-1 = "Iosevka Nerd Font:antialias=true:size=11;4"
 
 modules-left = i3
-modules-center = mpd
+modules-center = {{if eq .chezmoi.hostname "martin-PC"}} mpd {{end}}
 modules-right = 
 
+{{if eq .chezmoi.hostname "martin-PC"}}
 include-file = ~/.config/polybar/modules/mpd.conf
+{{end}}
 {{end}}
 
 ################################################################################
