--- a/dot_config/polybar/executable_launch.sh.tmpl
+++ b/dot_config/polybar/executable_launch.sh.tmpl
@@ -5,6 +5,6 @@ killall -q polybar
 while pgrep -u $UID -x polybar >/dev/null; do sleep 0.2; done
 
 polybar primary &
-{{if eq .screens "2"}}
+{{if ge (len .monitors) 2 -}}
 polybar secondary &
 {{end}}
