improve package install script

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -43,4 +43,4 @@ if [[ ! $REPLY =~ ^[Yy]$ ]]; then
 fi
 
 
-yay -S --needed {{ template "join" $packages}}
+yay --norebuild --nocleanmenu --nodiffmenu --needed -S {{ template "join" $packages}}
