--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -61,7 +61,7 @@ font-0 = "Noto Display:style=Light:size=11;4"
 font-1 = "Iosevka Nerd Font:antialias=true:size=11;4"
 
 modules-left = i3
-modules-center = {{ if eq .chezmoi.hostname "martin-PC" -}} mpd {{- end }}
+modules-center = {{/* if eq .chezmoi.hostname "martin-PC" -}} mpd {{- end */}}
 modules-right = 
 
 {{- end }}
@@ -76,9 +76,9 @@ include-file = ~/.config/polybar/modules/temperature.conf
 include-file = ~/.config/polybar/modules/date.conf
 include-file = ~/.config/polybar/modules/pulseaudio.conf
 
-{{- if eq .chezmoi.hostname "martin-PC" }}
+{{/*- if eq .chezmoi.hostname "martin-PC" }}
 include-file = ~/.config/polybar/modules/mpd.conf
-{{end}}
+{{end*/}}
 
 {{- if .is_laptop }}
 include-file = ~/.config/polybar/modules/battery.conf
