add system monitor shortcut

--- a/dot_config/exact_i3/config.tmpl
+++ b/dot_config/exact_i3/config.tmpl
@@ -147,6 +147,8 @@ bindsym Ctrl+XF86MonBrightnessDown exec xbacklight -dec 1
 bindsym Print --release exec "scrot -s /tmp/screenshot-$(date +%F_%T).png -e 'xclip -selection c -t image/png < $f'"
 bindsym Shift+Print --release exec "scrot /tmp/screenshot-$(date +%F_%T).png -e 'xclip -selection c -t image/png < $f'"
 
+bindsym Ctrl+Shift+Escape exec --no-startup-id gnome-system-monitor
+
 bindsym $mod+B move scratchpad
 bindsym $mod+N scratchpad show
 
