--- a/dot_config/exact_polybar/config.tmpl
+++ b/dot_config/exact_polybar/config.tmpl
@@ -61,7 +61,7 @@ font-0 = "Noto Display:style=Light:size=11;4"
 font-1 = "Iosevka Nerd Font:antialias=true:size=11;4"
 
 modules-left = i3
-modules-center = {{/* if eq .chezmoi.hostname "martin-PC" -}} mpd {{- end */}}
+modules-center = date
 modules-right = 
 
 {{- end }}
