update background image

--- a/dot_config/exact_i3/config.tmpl
+++ b/dot_config/exact_i3/config.tmpl
@@ -170,7 +170,8 @@ bindsym {{$qalckey}} exec $terminal -t QALC -e qalc
 
 exec_always --no-startup-id setxkbmap -layout de,gr -variant nodeadkeys, -option grp:caps_switch grp_led:scroll kpdl:dot numpad:mac
 
-exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpaper/mountains.jpeg
+# background: https://triplelift.com/wp-content/uploads/2017/12/aleks-dahlberg-258314.jpg
+exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpaper/aleks-dahlberg-258314.jpg
 exec_always --no-startup-id nm-applet
 exec_always --no-startup-id ~/.config/compton/launch.sh
 exec_always --no-startup-id ~/.config/polybar/launch.sh
