fix qalc binding on laptop

--- a/dot_config/exact_i3/config.tmpl
+++ b/dot_config/exact_i3/config.tmpl
@@ -159,7 +159,7 @@ bindsym $mod+e exec $terminal -e ranger
 
 {{ $qalckey := "XF86Calculator" -}}
 {{ if eq .chezmoi.hostname "martin-x360" -}}
-	{{ $qalckey = "XF86Calculator" -}}
+	{{ $qalckey = "$mod+F1" -}}
 {{ else if eq .chezmoi.hostname "r8" -}}
 	{{ $qalckey = "XF86Search" -}}
 {{ end -}}
