--- a/dot_config/exact_i3/executable_lock.sh.tmpl
+++ b/dot_config/exact_i3/executable_lock.sh.tmpl
@@ -1,12 +1,15 @@
 #!/bin/bash
 
-i3lock -e -f -B 1 \
+pgrep i3lock || i3lock \
+    -e -f -B 1 \
     --clock --timecolor=ffffffff --datecolor=ffffffff \
     --indicator \
     --ringcolor=505050ff --keyhlcolor=ffffffff \
     --linecolor=00000000 \
     --ringvercolor=00000000 --insidevercolor=00000000 --verifcolor=00000000 \
     --ringwrongcolor=00000000 --insidewrongcolor=00000000 --wrongcolor=00000000 \
-    --wrongtext="f*ck off!" --wrongsize=100 --wrongcolor=ffffffff
+    --wrongtext="f*ck off!" --wrongsize=100 --wrongcolor=ffffffff \
+    {{- if eq .chezmoi.hostname "martin-PC" -}} --no-verify \{{- end }}
+    --pass-power-keys --pass-screen-keys
 
 systemctl suspend
