--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -14,6 +14,7 @@
     {{ $packages = concat $packages ( list "i3-gaps" "i3lock-color-git" "compton" "polybar" "nerd-fonts-iosevka" "noto-fonts" ) }}
     {{ $packages = concat $packages ( list "dmenu" "j4-dmenu-desktop" "feh" "scrot" "xclip" ) }}
     {{ $packages = concat $packages ( list "alacritty" ) }}
+    {{ $packages = concat $packages ( list "python-fontawesome" "python-i3ipc" ) }}
 
     {{ if .is_laptop }}
     	{{ $packages = concat $packages ( list "xorg-xbacklight"  ) }}
