make polybar identical on all monitors

--- a/dot_config/exact_polybar/executable_launch.sh.tmpl
+++ b/dot_config/exact_polybar/executable_launch.sh.tmpl
@@ -4,7 +4,6 @@ killall -q polybar
 
 while pgrep -u $UID -x polybar >/dev/null; do sleep 0.2; done
 
-polybar primary &
-{{if ge (len .monitors) 2 -}}
-polybar secondary &
+{{ range .monitors }}
+polybar {{ . }} &
 {{end}}
