--- a/dot_config/exact_polybar/config.tmpl
+++ b/dot_config/exact_polybar/config.tmpl
@@ -18,10 +18,11 @@ foreground = #D8DEE9
 foreground-alt = #D8DEE9
 
 ################################################################################
-# primary bar
-
-[bar/primary]
-monitor = {{ index .monitors 0 }}
+# bars
+{{ $data := . }}
+{{ range .monitors }}
+[bar/{{ . }}]
+monitor = {{ . }}
 
 foreground = ${colors.foreground}
 background = ${colors.background}
@@ -39,32 +40,8 @@ font-1 = "Iosevka Nerd Font:antialias=true:size=11;4"
 
 modules-left = i3
 modules-center = date
-modules-right = {{ if .is_laptop -}} battery backlight {{ end -}} temperature cpu memory pulseaudio
-
-{{ if ge (len .monitors) 2 -}}
-################################################################################
-# secondary bar (dual screen)
-
-[bar/secondary]
-monitor = {{ index .monitors 1 }}
-
-foreground = ${colors.foreground}
-background = ${colors.background}
-
-width = 100%
-height = 2.4%
-line-size = 1
-padding-right = 5
-module-margin-right = 5
-
-font-0 = "Noto Display:style=Light:size=11;4"
-font-1 = "Iosevka Nerd Font:antialias=true:size=11;4"
-
-modules-left = i3
-modules-center = date
-modules-right = 
-
-{{- end }}
+modules-right = {{ if $data.is_laptop -}} battery backlight {{ end -}} temperature cpu memory pulseaudio
+{{end}}
 
 ################################################################################
 # modules
