my changes to layout

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -28,7 +28,7 @@
     {{ $packages = concat $packages ( list "python-numpy" "python-scipy" "python-matplotlib" "python-argcomplete" "autopep8" "python-pyserial" ) }}
 
     {{/* misc */}}
-    {{ $packages = concat $packages ( list "thunderbird" "circuit-simulator" ) }}
+    {{ $packages = concat $packages ( list "thunderbird" ) }}
 {{ end }}
 
 {{define "join"}}{{ range . -}}{{ print . }} {{ end }}{{end}}
