Lock screen picture

--- a/dot_config/exact_i3/executable_power.sh.tmpl
+++ b/dot_config/exact_i3/executable_power.sh.tmpl
@@ -5,6 +5,7 @@ function lock {
     pgrep i3lock && return
     i3lock \
         -f -B 1 \
+        --image "/home/verap/Pictures/Wallpaper/911_S.png" \
         --clock --timecolor=ffffffff --datecolor=ffffffff \
         --indicator \
         --ringcolor=505050ff --keyhlcolor=ffffffff \
@@ -13,7 +14,7 @@ function lock {
         --ringwrongcolor=00000000 --insidewrongcolor=00000000 --wrongcolor=00000000 \
         --wrongtext="f*ck off!" --wrongsize=100 --wrongcolor=ffffffff \
         --pass-power-keys --pass-screen-keys \
-        {{ if eq .chezmoi.hostname "martin-PC" -}} --no-verify {{- else -}} --ignore-empty-password {{- end }}
+        --ignore-empty-password
 }
 
 function suspend {
